fixed commentspacing&hr

--- a/MusicianFinder/app/assets/stylesheets/application.css.scss
+++ b/MusicianFinder/app/assets/stylesheets/application.css.scss
@@ -85,7 +85,7 @@ footer ul {
     word-wrap: break-word;
     padding: 20px;
     background-color: white;
-    
+
 }
 
 .col-md-4 {
@@ -128,7 +128,7 @@ footer ul {
 
 .btn-group{
     display: inline-block;
-   
+
 }
 
  .btn{
@@ -180,7 +180,7 @@ footer ul {
 .test {
     margin-top: 40px;
     font-family: 'Lato', sans-serif;
-    
+
 }
 
 .friends {
@@ -190,7 +190,7 @@ footer ul {
 .friends li {
     display: inline;
     list-style-type: none;
-    
+
 }
 
 .friendsList {
@@ -205,7 +205,7 @@ hr {
     padding-bottom: 20px;
     padding-top: 20px;
     text-align: left;
-    
+
 }
 
 
@@ -292,8 +292,8 @@ p {
 
 
 .profile-head {
- 
- 
+
+
   background-color: #f2f2f2;
   color: #444;
   font-family: 'Lato', sans-serif;
@@ -314,7 +314,7 @@ p {
 
 .profile-text {
   margin-top: -3.5em;
-  padding: 5em 1.5em 1.5em 1.5em; 
+  padding: 5em 1.5em 1.5em 1.5em;
   background: white;
   border-radius: 3px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.1)
@@ -323,7 +323,7 @@ p {
 .profile-name{
   margin-right: -1em;
   margin-left: -1em;
-  margin-top: -0.5em;    
+  margin-top: -0.5em;
   border-bottom: 1px solid rgba(0,0,0,0.1);
   font-size: 1.5em;
   text-transform: uppercase;
@@ -335,7 +335,7 @@ p {
 }
 
 .btn-con {
-    
+
 }
 
 
@@ -351,7 +351,6 @@ p {
 }
 
 .comments_wrapper.clearfix {
-    padding-bottom: 50px;
 }
 
 .commenttext {
@@ -362,4 +361,3 @@ p {
     padding-bottom: 20px;
 }
 // COMMENTS END //
-
